--- a/client/index.html
+++ b/client/index.html
@@ -183,7 +183,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous">
     </script>
-    <script src="app.js"></script>
+    <script src="http://localhost:8082/app.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 </html>
